# launcher-electron

./: .eslintrc  README.md  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: release.yaml
rust-utils/: Cargo.toml
rust-utils/src/: conductor_config.rs  types.rs  zome_call_signer.rs
scripts/: setup-binaries.sh
src/main/: api.ts  binaries.ts  eventEmitters.ts  filesystem.ts  holochainManager.ts  index.ts  lairKeystore.ts  launcherEmitter.ts  logs.ts  sharedTypes.ts  windows.ts
src/preload/: admin.ts  happs.ts
src/renderer/: index.html  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json
src/renderer/.svelte-kit/: ambient.d.ts  tsconfig.json
src/renderer/src/: renderer.ts
src/renderer/src/api/: app-data.ts  index.ts
src/renderer/src/components/: Tooltip.svelte  password.ts
src/renderer/src/lib/: client.ts  clients.ts
src/renderer/src/routes/: +layout.svelte  +page.svelte
src/renderer/src/routes/enter-password/: +page.svelte
src/renderer/src/routes/setup-lair/: +page.svelte
src/renderer/src/services/: fetch-state-info.ts  index.ts  language-settings-persist.ts
src/renderer/src/types/: index.d.ts  index.ts  query.ts
src/renderer/src/utils/: constants.ts  error-utils.ts  index.ts
src/types/: electron-actions.d.ts  electron-actions.ts  eventEmitters.ts  holochain-actions.d.ts  holochain-actions.ts  index.d.ts  index.ts  initialization.ts
