[package]
edition = "2021"
name = "hc-launcher-rust-utils"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
holochain_client = "0.5.0-dev.25"
holochain_conductor_api = "0.3.0-beta-dev.30"
holochain_integrity_types = "0.3.0-beta-dev.20"
holochain_p2p = "0.3.0-beta-dev.28"
holochain_types = "0.3.0-beta-dev.27"
holochain_zome_types = "0.3.0-beta-dev.21"
holo_hash = "0.3.0-beta-dev.17"
kitsune_p2p_timestamp = "0.3.0-beta-dev.5"
lair_keystore_api = "0.3.0"

nanoid = "0.4.0"

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"

serde_yaml = "0.8"
sodoken = "0.0.9"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
